<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/register_toolbar"
        android:layout_height="?attr/actionBarSize"
        android:layout_width="match_parent"
        android:background="?attr/colorPrimary"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light">
        <TextView
            android:id="@+id/registerTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            />
    </android.support.v7.widget.Toolbar>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="20dp">

        <EditText
            android:id="@+id/registerUsername"
            android:layout_width="266dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_marginLeft="15dp"
            android:layout_weight="5"
            android:ellipsize="middle"
            android:hint="@string/phone"
            android:maxLines="1"
            android:maxLength="11"
            android:singleLine="true"
            android:textColor="@color/black" />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:orientation="horizontal"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="15dp">

        <EditText
            android:id="@+id/registerPassword"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_marginLeft="15dp"
            android:layout_weight="5"
            android:focusable="true"
            android:inputType="textPassword"
            android:hint="@string/password"
            android:singleLine="true"
            android:maxLines="1"
            android:maxLength="16"
            android:textColor="@color/black"
            android:imeActionLabel="Login"
            android:imeOptions="actionUnspecified"/>
    </LinearLayout>
    <TextView
        android:id="@+id/lengthError"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:textSize="12sp"
        android:textColor="@color/colorAccent"/>

    <RadioGroup
        android:id="@+id/typeSelect"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:orientation="horizontal"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp">
        <RadioButton
            android:id="@+id/typeAd"
            android:layout_marginLeft="15dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tabTypeOne"/>
        <RadioButton
            android:id="@+id/typeNormal"
            android:layout_marginLeft="15dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tabTypeTwo"
            android:checked="true"/>

    </RadioGroup>
    <Button
        android:id="@+id/registerButton"
        android:layout_width="267dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:text="@string/register"
        android:textSize="20sp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp" />

</LinearLayout>
