<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/evaluate_activity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/detail_toolbar"
        android:layout_height="?attr/actionBarSize"
        android:layout_width="match_parent"
        android:background="?attr/colorPrimary"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light">
        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            />

        <Button
            android:id="@+id/modify"
            android:layout_gravity="right"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:text="@string/modify"
            style="@style/ActionButton.Overflow"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </android.support.v7.widget.Toolbar>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/positionTitle"
                style="@style/textStyle"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/item"
                android:drawableLeft="@drawable/position"
                android:drawablePadding="10dp"
                android:gravity="center_vertical"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:text="@string/canteen_position"
                android:textSize="16sp" />
            <View
                android:layout_width="match_parent"
                android:layout_height="1.0dip"
                android:background="@color/gray" />
            <TextView
                android:id="@+id/position"
                style="@style/textStyle"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/item"
                android:drawablePadding="10dp"
                android:gravity="center_vertical"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:textSize="16sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1.0dip"
                android:background="@color/gray" />

            <TextView
                android:id="@+id/timeTitle"
                style="@style/textStyle"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/item"
                android:drawableLeft="@drawable/time"
                android:drawablePadding="10dp"
                android:gravity="center_vertical"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:text="@string/business_hours"
                android:textSize="16sp" />
            <View
                android:layout_width="match_parent"
                android:layout_height="1.0dip"
                android:background="@color/gray" />
            <TextView
                android:id="@+id/time"
                style="@style/textStyle"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/item"
                android:drawablePadding="10dp"
                android:gravity="center_vertical"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:textSize="16sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1.0dip"
                android:background="@color/gray" />

            <TextView
                android:id="@+id/mainDishTitle"
                style="@style/textStyle"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/item"
                android:drawableLeft="@mipmap/specialmeal"
                android:drawablePadding="10dp"
                android:drawableRight="@drawable/right"
                android:gravity="center_vertical"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:text="@string/main_dish"
                android:textSize="16sp" />
            <View
                android:layout_width="match_parent"
                android:layout_height="1.0dip"
                android:background="@color/gray" />
            <TextView
                android:id="@+id/mainDish"
                style="@style/textStyle"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/item"
                android:drawablePadding="10dp"
                android:gravity="center_vertical"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:textSize="16sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1.0dip"
                android:background="@color/gray" />

            <TextView
                android:id="@+id/suggestionTitle"
                style="@style/textStyle"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/item"
                android:drawableLeft="@drawable/suggestion"
                android:drawablePadding="10dp"

                android:gravity="center_vertical"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:text="@string/suggestion"
                android:textSize="16sp" />




        </LinearLayout>

    </ScrollView>

</LinearLayout>
